# StateSmurf

./: .gitignore  CMakeLists.txt  README.md
DiagramSmurf/: CMakeLists.txt  README.md
DiagramSmurf/cmake/: Dependencies.cmake
DiagramSmurf/example/: main.cpp
DiagramSmurf/include/state_smurf/diagram/: Edge.hpp  StateDiagram.hpp  StateGraph.hpp  Vertex.hpp
DiagramSmurf/source/state_smurf/diagram/: StateDiagram.cpp  StateGraph.cpp
DiagramSmurf/test/: CMakeLists.txt
DiagramSmurf/test/include/: DiagramSmurfTest.hpp  SGTest.hpp
DiagramSmurf/test/source/: DiagramSmurfTest.cpp  SGTest.cpp
SmurfEvaluator/: .gitignore  CMakeLists.txt  README.md  main.cpp
SmurfEvaluator/cmake/: Dependencies.cmake
SmurfEvaluator/include/bringauto/log_evaluator/: Filter.hpp  LogsComparer.hpp
SmurfEvaluator/include/state_smurf/: StateDiagramDefinition.hpp
SmurfEvaluator/include/state_smurf/log_evaluator/: CircuitAggregator.hpp  CircuitCreator.hpp  CircuitFinder.hpp  Filter.hpp  LineParser.hpp  LogsComparer.hpp
SmurfEvaluator/include/state_smurf/log_evaluator/helpers/: FileHelper.hpp  Filter.hpp  LineParser.hpp
SmurfEvaluator/source/bringauto/log_evaluator/: Filter.cpp  LogsComparer.cpp
SmurfEvaluator/source/state_smurf/log_evaluator/: CircuitAggregator.cpp  CircuitCreator.cpp  CircuitFinder.cpp  Filter.cpp  LineParser.cpp  LogsComparer.cpp
SmurfEvaluator/source/state_smurf/log_evaluator/helpers/: FileHelper.cpp  Filter.cpp  LineParser.cpp
SmurfEvaluator/test/: CMakeLists.txt  mainTests.cpp
SmurfEvaluator/test/include/: CompareFileTest.hpp  CompareLineTest.hpp  FilterTests.hpp
SmurfEvaluator/test/source/: CicuitFinderTest.cpp  CircuitAggregatorTest.cpp  CompareFileTest.cpp  CompareLineTest.cpp  FilterTests.cpp  LineParserTest.cpp
SmurfEvaluator/test/testLogs/: aggregated
SmurfEvaluator/test/testLogs/CircuitDiagrams/aggregator/: EndInCircuit  aggregatedEndInCircuit  doubleShortEnd  endInCircuit  endOutCircuit  linear  multiRun  onlyCircuit  shor-longCircuit  shortEnd  shortEnd2  shortLongEnd  singleCircuit  unstartedCircuit
SmurfEvaluator/test/testLogs/CircuitDiagrams/finder/: allPossibleCircuits  multiStart  noCircuit  simpleCircuit
SmurfEvaluator/test/testLogs/CircuitDiagrams/invalid/: emptyDiagram  noStart
SmurfExampleApp/: CMakeLists.txt  README.md  main.cpp
SmurfExampleApp/cmake/: Dependencies.cmake
SmurfExampleApp/include/state_smurf/example/: Drive.h
SmurfExampleApp/source/state_smurf/example/: Drive.cpp
SmurfExampleApp/test/: SmurfTests.sh
SmurfExampleApp/test/smurf/: .gitignore  scenarios.json
SmurfExampleApp/test/smurf/aggregated_etalons/: allOk  timeout
SmurfTestingScripts/: CompareScenarios.py  README.md  compare_scenarios.py  smurf_compare_scenarios.py
StateDrivenApp/: CMakeLists.txt  main.cpp
StateDrivenApp/include/: Drive.h
StateDrivenApp/source/: Drive.cpp
StateGraph/: CMakeLists.txt  README.md  main.cpp
StateGraph/include/: Edge.h  Edge.hpp  StateGraph.h  StateGraph.hpp  Vertex.h  Vertex.hpp
StateGraph/source/: StateGraph.cpp  Vertex.cpp
StateGraph/test/: CMakeLists.txt
StateGraph/test/include/: SGTest.h  SGTest.hpp
StateGraph/test/source/: SGTest.cpp
StateTransition/: CMakeLists.txt  README.md  main.cpp
StateTransition/example/: main.cpp
StateTransition/include/: StateTransition.h  StateTransition.hpp
StateTransition/lib/SGLib/include/: Edge.h  StateGraph.h  Vertex.h
StateTransition/source/: StateTransition.cpp
StateTransition/test/: CMakeLists.txt
StateTransition/test/include/: StateTransitionTest.h  StateTransitionTest.hpp
StateTransition/test/source/: StateTransitionTest.cpp
StateTransitionLogEvaluator/: CMakeLists.txt  main.cpp
StateTransitionLogEvaluator/cmake/: Dependencies.cmake
StateTransitionLogEvaluator/include/: Filter.h  LogsComparer.h
StateTransitionLogEvaluator/include/bringauto/logEvaluator/: Filter.h  LogsComparer.h
StateTransitionLogEvaluator/include/bringauto/log_evaluator/: Filter.h  LogsComparer.h  LogsComparer.hpp
StateTransitionLogEvaluator/source/: Filter.cpp  LogsComparer.cpp
StateTransitionLogEvaluator/source/bringauto/logEvaluator/: Filter.cpp  LogsComparer.cpp
StateTransitionLogEvaluator/source/bringauto/log_evaluator/: Filter.cpp  LogsComparer.cpp
StateTransitionLogEvaluator/test/: CMakeLists.txt
StateTransitionLogEvaluator/test/include/: CompareLineTest.hpp  FilterTests.h  LogsCompareTest.hpp
StateTransitionLogEvaluator/test/source/: FilterTests.cpp  LogsCompareTest.cpp
TransitionSmurf/: CMLibStorage.cmake  CMakeLists.txt  README.md
TransitionSmurf/cmake/: Dependencies.cmake
TransitionSmurf/example/: main.cpp
TransitionSmurf/include/state_smurf/transition/: StateTransition.hpp  StateTransitionLoggerId.hpp
TransitionSmurf/include/state_smurf/transition_smurf/: StateTransition.hpp
TransitionSmurf/source/state_smurf/transition/: StateTransition.cpp
TransitionSmurf/source/state_smurf/transition_smurf/: StateTransition.cpp
TransitionSmurf/test/: CMakeLists.txt
TransitionSmurf/test/include/: TransitionSmurfTests.hpp
TransitionSmurf/test/source/: TransitionSmurfTests.cpp
cmake/: state_smurfConfig.cmake.in
include/: Edge.h  StateGraph.h  Vertex.h
source/: Edge.cpp  StateGraph.cpp  Vertex.cpp
