CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(DiagramSmurf)

IF(TARGET DiagramSmurfLib)
	return()
ENDIF()

SET(CMAKE_CXX_STANDARD 20)

OPTION(BRINGAUTO_TESTS "Enable tests" OFF)
OPTION(STATESMURF_TESTS "Enable StateSmurf tests" ON)
OPTION(BRINGAUTO_SAMPLES "Enable build of sample applications" OFF)
OPTION(BRINGAUTO_INSTALL "Enable install feature" OFF)
OPTION(BRINGAUTO_PACKAGE "Enable package creation" OFF)
OPTION(BRINGAUTO_SYSTEM_DEP "Use system dependencies" OFF)

FILE(GLOB_RECURSE source_files "source/*")
ADD_LIBRARY(DiagramSmurfLib SHARED ${source_files})
TARGET_INCLUDE_DIRECTORIES(DiagramSmurfLib PUBLIC "include")

IF (BRINGAUTO_TESTS AND STATESMURF_TESTS)
	ENABLE_TESTING()
	ADD_SUBDIRECTORY("test")
ENDIF()

IF (BRINGAUTO_SAMPLES)
	ADD_EXECUTABLE(diagramSmurf example/main.cpp)
	TARGET_LINK_LIBRARIES(diagramSmurf PUBLIC DiagramSmurfLib)
ENDIF(BRINGAUTO_SAMPLES)

