CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(StateDrivenApp)

FIND_PACKAGE(CMLIB REQUIRED)

OPTION(BRINGAUTO_TESTS "Enable tests" OFF)
OPTION(BRINGAUTO_INSTALL "Enable install feature" OFF)
OPTION(BRINGAUTO_PACKAGE "Enable package creation" OFF)
OPTION(BRINGAUTO_SYSTEM_DEP "Use system dependencies" OFF)

IF(NOT BRINGAUTO_SYSTEM_DEP)
	INCLUDE(cmake/Dependencies.cmake)
ENDIF()

SET(CMAKE_CXX_STANDARD 20)

FIND_PACKAGE(libbringauto_logger)


ADD_LIBRARY(STransLib SHARED IMPORTED)
SET_PROPERTY(TARGET STransLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/STransLib/libstateTransitionLib.so")
ADD_LIBRARY(SGLib SHARED IMPORTED)
SET_PROPERTY(TARGET SGLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/SGLib/libstateGraphLib.so")

FILE(GLOB_RECURSE source_files "source/*")
ADD_LIBRARY(stateDrivenAppLib SHARED ${source_files})
TARGET_INCLUDE_DIRECTORIES(stateDrivenAppLib PUBLIC
		"include"
		"${CMAKE_CURRENT_SOURCE_DIR}/lib/STransLib/include"
		"${CMAKE_CURRENT_SOURCE_DIR}/lib/SGLib/include"
		)
TARGET_LINK_LIBRARIES(stateDrivenAppLib PUBLIC bringauto_logger::bringauto_logger STransLib SGLib)

ADD_EXECUTABLE(stateDrivenApp main.cpp)
TARGET_LINK_LIBRARIES(stateDrivenApp PUBLIC stateDrivenAppLib)
#[[
IF (BRINGAUTO_TESTS)
	ENABLE_TESTING()
	ADD_SUBDIRECTORY("test")
ENDIF(BRINGAUTO_TESTS)

IF(BRINGAUTO_INSTALL)
	INCLUDE(GNUInstallDirs)
	INSTALL(TARGETS stateTransitionLib EXPORT libstateTransitionLibTargets
			LIBRARY DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/lib/STransLib
			ARCHIVE DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/lib/STransLib
			RUNTIME DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/STransLib
			INCLUDES DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include/STransLib
			)
	INSTALL(
			DIRECTORY
			${CMAKE_CURRENT_SOURCE_DIR}/include/
			DESTINATION
			${CMAKE_CURRENT_BINARY_DIR}/lib/STransLib/include
			COMPONENT
			Devel
	)
ENDIF()
]]
