CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(State_Graph)

SET(CMAKE_CXX_STANDARD 20)

OPTION(BRINGAUTO_TESTS "Enable tests" OFF)
#TARGET_LINK_LIBRARIES(bringautolib PUBLIC cxxopts::cxxopts protobuff_lib ${OSMIUM_XML_LIBRARIES} bringauto_logger::bringauto_logger)

IF (BRINGAUTO_TESTS)
	ENABLE_TESTING()
	ADD_SUBDIRECTORY("test")
ENDIF(BRINGAUTO_TESTS)

FILE(GLOB_RECURSE source_files "source/*")
ADD_LIBRARY(stateGraphLib SHARED ${source_files})
TARGET_INCLUDE_DIRECTORIES(stateGraphLib PUBLIC "include")

INCLUDE(GNUInstallDirs)
INSTALL(TARGETS stateGraphLib EXPORT libstateGraphLibTargets
		LIBRARY DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/lib/SGLib
		ARCHIVE DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/lib/SGLib
		RUNTIME DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/SGLib
		INCLUDES DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include/SGLib
		)
INSTALL(
		DIRECTORY
		${CMAKE_CURRENT_SOURCE_DIR}/include/
		DESTINATION
		${CMAKE_CURRENT_BINARY_DIR}/lib/SGLib/include
		COMPONENT
		Devel
)


ADD_EXECUTABLE(stateGraph main.cpp)
TARGET_LINK_LIBRARIES(stateGraph PUBLIC stateGraphLib)

