CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(State_Transition)

FIND_PACKAGE(CMLIB REQUIRED)

OPTION(BRINGAUTO_TESTS "Enable tests" OFF)
OPTION(BRINGAUTO_INSTALL "Enable install feature" OFF)
OPTION(BRINGAUTO_PACKAGE "Enable package creation" OFF)
OPTION(BRINGAUTO_SYSTEM_DEP "Use system dependencies" OFF)

IF(NOT BRINGAUTO_SYSTEM_DEP)
	INCLUDE(cmake/Dependencies.cmake)
ENDIF()

SET(CMAKE_CXX_STANDARD 20)

FIND_PACKAGE(libbringauto_logger)

ADD_SUBDIRECTORY("../StateGraph/" "StateGraph/")

FILE(GLOB_RECURSE source_files "source/*")
ADD_LIBRARY(stateTransitionLib SHARED ${source_files})
TARGET_INCLUDE_DIRECTORIES(stateTransitionLib PUBLIC "include" )
TARGET_LINK_LIBRARIES(stateTransitionLib PUBLIC bringauto_logger::bringauto_logger stateGraphLib)

ADD_EXECUTABLE(stateTransition main.cpp)
TARGET_LINK_LIBRARIES(stateTransition PUBLIC stateTransitionLib)

IF (BRINGAUTO_TESTS)
	ENABLE_TESTING()
	ADD_SUBDIRECTORY("test")
ENDIF(BRINGAUTO_TESTS)

IF(BRINGAUTO_INSTALL)
	INCLUDE(GNUInstallDirs)
	INSTALL(TARGETS stateTransitionLib EXPORT libstateTransitionLibTargets
			LIBRARY DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/lib/STransLib
			ARCHIVE DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/lib/STransLib
			RUNTIME DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/STransLib
			INCLUDES DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include/STransLib
			)
	INSTALL(
			DIRECTORY
			${CMAKE_CURRENT_SOURCE_DIR}/include/
			DESTINATION
			${CMAKE_CURRENT_BINARY_DIR}/lib/STransLib/include
			COMPONENT
			Devel
	)
ENDIF()

